# JcQ

./: .env.setup_instructions.txt  .gitignore  CONNECTION_SUMMARY.md  DIRECTORY_TREE.md  LICENSE  PUSH_TO_GITHUB.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  SETUP_GITHUB.md  SETUP_SUPABASE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  setup_instructions.md
config/: app.yaml  logging.yaml  market.yaml  model.yaml  risk.yaml  strategy.yaml
migrations/: 001_init.sql
scripts/: apply_migrations.py  doctor.py  generate_demo_data.py  ingest_csv_bars.py  ingest_fred.py  ingest_parquet_bars.py  make_report.py  run_api.py  run_backtest.py  run_live.py  run_monte_carlo.py  setup_env.py  test_supabase_connection.py  train_model.py  tune_model.py
src/jcq/: __init__.py
src/jcq/api/: __init__.py  app.py
src/jcq/backtest/: __init__.py  costs.py  engine.py  execution_sim.py
src/jcq/core/: __init__.py  config.py  errors.py  logging.py  retry.py  time.py  validation.py
src/jcq/dashboard/: __init__.py  report.py
src/jcq/data/: __init__.py  demo_generator.py  ingest.py
src/jcq/eval/: __init__.py  metrics.py  plots.py  walk_forward.py
src/jcq/features/: __init__.py  features.py  internals.py  options_features.py  regime.py  sessions.py
src/jcq/labels/: __init__.py  labels.py
src/jcq/live/: __init__.py  broker.py  live_loop.py  paper_broker.py  (+1 more)
tests/: conftest.py  test_backtest_engine.py  test_candidates.py  test_db_smoke.py  test_features.py  test_montecarlo.py  test_risk.py  test_scorer_ev.py  test_time_sessions.py  test_walkforward.py
(+28 files in other folders)
